增加客户端鉴权，注释掉统计日志

--- a/src/main/resources/conf/server.properties
+++ b/src/main/resources/conf/server.properties
@@ -4,3 +4,7 @@ listenPort=7890
 idleSeconds=1000
 # \u6BCF\u79D2\u6D41\u91CF\u6570\uFF0C\u8D85\u8FC7\u6D41\u91CF\u8FD4\u56DE\u72B6\u6001\u7801 8 (cmpp \u534F\u8BAE\u89C4\u5B9A)
 flowLimit = 20000
+# client \u767B\u9646\u7528\u6237\u540D
+user = SpiderMan
+# client \u767B\u9646\u5BC6\u7801
+password = 001009
