--- a/src/main/resources/conf/server.properties
+++ b/src/main/resources/conf/server.properties
@@ -8,3 +8,5 @@ flowLimit = 20000
 user = SpiderMan
 # client \u767B\u9646\u5BC6\u7801
 password = 001009
+# \u662F\u5426\u5BF9\u5BA2\u6237\u7AEF\u9274\u6743
+needValidate = true
